--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,6 @@
 
 <resources>
 
-    <string name="app_name">Debug and Delete</string>
+    <string name="app_name">Try and Remove</string>
 
 </resources>
