Made layout with placeholder elements, fixed broadcast receiver bug.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
 <resources>
 
     <string name="app_name">Try and Remove</string>
+    <string name="app_name_not_found">Name not found</string>
 
 </resources>
