--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="app_list_toolbar_action_record_title">Toggle record</string>
     <string name="app_list_layout_remove_apps_title">Remove all shown apps</string>
     <string name="app_list_layout_clear_app_list_title">Clear list</string>
+    <string name="app_list_activity_enable_track_toast_message">App tracking active</string>
+    <string name="app_list_activity_disable_track_toast_message">App tracking deactivated</string>
 
 </resources>
