--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,7 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  -->
-
+-->
 <resources>
 
     <string name="app_name">Try and Remove</string>
@@ -31,5 +30,6 @@
     <string name="remove_warning_dialog_agree">Remove</string>
     <string name="remove_warning_dialog_cancel">Cancel</string>
     <string name="navigation_drawer_private_policy_title">Private policy</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
