--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+
 <resources>
 
     <string name="app_name">Try and Remove</string>
@@ -29,8 +30,7 @@
     <string name="remove_warning_dialog_message">Remove all apps in the list from your phone?</string>
     <string name="remove_warning_dialog_agree">Remove</string>
     <string name="remove_warning_dialog_cancel">Cancel</string>
-    <string name="navigation_drawer_private_policy_title">Private policy</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="navigation_drawer_app_list_title">Installed apps list</string>
+    <string name="navigation_drawer_private_policy_title">Privacy Policy</string>
+    <string name="navigation_drawer_app_list_title">App List</string>
 
 </resources>
