Converted the fragments in Activities and extracted the navigation stuff to a super class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="app_name_not_found">Name not found</string>
     <string name="app_list_toolbar_action_refresh_title">Refresh list</string>
     <string name="app_list_toolbar_action_record_title">Toggle record</string>
+    <string name="toolbar_back">Back</string>
     <string name="app_list_layout_remove_apps_title">Remove all shown apps</string>
     <string name="app_list_layout_clear_app_list_title">Clear list</string>
     <string name="clear_warning_dialog_message">Clear app list?</string>
@@ -28,7 +29,7 @@
     <string name="remove_warning_dialog_message">Remove all apps in the list from your phone?</string>
     <string name="remove_warning_dialog_agree">Remove</string>
     <string name="remove_warning_dialog_cancel">Cancel</string>
-    <string name="navigation_drawer_private_policy_title">Privacy Policy</string>
+    <string name="private_policy_title">Privacy Policy</string>
     <string name="navigation_drawer_app_list_title">App List</string>
 
 </resources>
