Added new item for settings and entry in nav panel Renamed other icons to match convention better

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="private_policy_title">Privacy Policy</string>
     <string name="navigation_drawer_app_list_title">App List</string>
     <string name="imprint_title">Imprint</string>
+    <string name="settings_title">Settings</string>
 
 </resources>
