--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="preferences_appearance_section_title">Appearance</string>
     <string name="preferences_appearance_switch_title">Colored Cells</string>
     <string name="preferences_appearance_switch_summary">Colors the cells background in the main color according to the app icon.</string>
+    <string name="app_list_hint_enabled">Recording enabled</string>
+    <string name="app_list_hint_disabled">Recording disabled</string>
 
 </resources>
